// The greeting service definition.

syntax = "proto3";

option go_package = "github.com/vitorsavian/warsong-repo/elminster/pkg/server/connections/grpc/pb";

package pb;

service Character {
  rpc CreateCharacter (CreateCharacterRequest) returns (CreateCharacterResponse) {}
  rpc UpdateCharacter (UpdateCharacterRequest) returns (UpdateCharacterResponse) {}
}

message Stats {
  int32 str = 1;
  int32 dex = 2;
  int32 con = 3;
  int32 int = 4;
  int32 char = 5;
  int32 wil = 6;
}

// The request message containing the user's name.
message CreateCharacterRequest {
  string name = 1;
  Stats stats = 2;
  int32 level = 3;
}

// The response message containing the greetings
message CreateCharacterResponse {
  string message = 1;
}

// The request message containing the user's name.
message UpdateCharacterRequest {
  string name = 1;
  Stats stats = 2;
  int32 level = 3;
}

// The response message containing the greetings
message UpdateCharacterResponse {
  string message = 1;
}